Django/Things/collect/static/collect/css/base.css
/* universal styling */

html {
    font-family: 'Josefin Sans', sans-serif;
}

body {
    margin: 0px;
}

.flex-container {
    display: flex;
}

/* styling header */

header {
    width: 100%;
    position: relative;
    z-index: 1;
    height: 60px;
    border-bottom: 1px solid #6A6D75;
    background-color: white;
}

#logo {
    width: 50px;
    height: 50px;
    padding: 5px 10px;
    margin-left: 45px;
}

nav {
    display: flex;
    align-items: center;
}

nav span {
    display: inline-block;
    padding-left: 30px;
    text-transform: uppercase;
    font-size: 13px;
}

nav span a {
    color: #6A6D75;
    text-decoration: none;
}

nav span a:active {
    color: inherit;
}

#user-icon {
    width: 50px;
    height: 50px;
    margin: 0px 45px 0px auto;
    cursor: pointer;
}

#user-icon > img {
    width: 50px;
    height: 50px;
}

/* Styling cho user popup */

.user-popup-bg {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    position: absolute;
    top: 0;
    display: none;
    justify-content: center;
    align-items: center;
    z-index: 2;
}

.user-popup-box {
    width: 300px;
    height: 300px;
    background-color: white;
    border-radius: 5px;
    flex-direction: column;
    align-items: flex-start;
}

.close {
    margin: 10px 10px 10px auto;
    font-size: 30px;
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
    cursor: pointer;
}

.user-popup-row {
    width: 80%;
    height: 40px;
    margin: 10px auto 20px 20px;
    border: solid #6A6D75 1px;
    align-items: center;
}

.user-popup-row > p {
    padding-left: 10px;
}

